added Movie Finder and an image to represent it to my portfolio

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
     <section id="work">
       <h2>Work</h2>
-      <a href="#">
-        <div class="surfreport" role="img" alt="surf report">
-          <h3>Surf Report</h3>
+      <a href="https://anthonylieu.github.io/project1-redesigned-spork/">
+        <div class="movieFinder" role="img" alt="movieFinder">
+          <h3>Movie Finder</h3>
         </div>
         </a>
     </section>
