--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
     <div class="row">
       <section id="placeholder">
-        <a href="#">
-          <div class="placeholder" role="img" alt="placeholder image">
-            <h3>Coming Soon</h3>
+        <a href="https://intense-savannah-08912.herokuapp.com/">
+          <div class="marvelCharacterDatabase" role="img" alt="Marvel Character Database">
+            <h3>Marvel Character Database</h3>
           </div>
         </a>
       </section>
